<resources>
    <string name="app_name" translatable="false">KanCalc</string>
    <string name="leveling_cost">Leveling cost</string>
    <string name="chance_proke">Chance profit</string>
    <string name="chance">Chance:</string>
    <string name="tries">Tries:</string>
    <string name="tries_hint">TRIES</string>
    <string name="edit_setup">Edit Setup</string>
    <string name="setup_not_setted_up">Please, set up a setup first!</string>
    <string name="empty_level_field">Please enter level(s)!</string>
    <string name="farm_legend">lvl from - lvl to | map | rank</string>
    <string name="craft_chance">Craft chance</string>
    <string name="droplist">Drop chance</string>
    <string name="communicating_with_kcdb">Communicating with KCDB..</string>
    <string name="unexpected_err">Unexpected error</string>
    <string name="err_com_kcdb">ERROR WITH COMMUNICATING KCDB\nMay be new ships hasn\'t added to DB\nOr server is temporary unavailable</string>
    <string name="library">Library</string>
    <string name="best_craft">Best craft: </string>
    <string name="fuel_cons">Fuel cons.: </string>
    <string name="ammo_cons">Ammo cons.: </string>
    <string name="speed">Speed: </string>
    <string name="sort">Sort</string>
    <string name="name">Name</string>
    <string name="cls">Class</string>
    <string name="view_hide_all">View/hide all</string>
    <string name="sort_by">Sort by</string>
    <string name="craft_iss_1">ERROR WITH COMMUNICATING KCDB\nMaybe, craft \"</string>
    <string name="craft_iss_2">\" isn\'t valid.\nPlease contact with developer about this issue.</string>
    <string name="enter" translatable="false">ENTER</string>
    <string name="checking_connection_with_kcdb">Checking connection with KCDB…</string>
    <string name="err_main_kcdb">KCDB seems sleepy, some utilities are not available!</string>
    <string name="err_main_inet">No internet connection, some utilities are not available. If you will turn it on, restart app</string>
    <string name="main_copyright_1" translatable="false">"KanCalc v."</string>
    <string name="main_copyright_2" translatable="false">" by ZONT_ ©2017"</string>
    <string name="lib_warning">Some stats are unknown.  Because it\'s not easy to fill that huge list</string>
    <string name="slots">Slots:</string>
    <string name="drop">Drop</string>
    <string name="craft">Craft</string>
    <string name="show_chance">Show chance…</string>
    <string name="lib_unbuildable">This kanmusu is unbuildable!</string>
    <string name="type_dd">Destroyer [DD]</string>
    <string name="type_cl">Light Cruiser [CL][CT]</string>
    <string name="type_ca">Heavy Cruiser [CA]</string>
    <string name="type_bb">Battleship [BB]</string>
    <string name="type_clt">Torpedo Cruiser [CLT]</string>
    <string name="type_cav">Aviation Cruiser [CAV]</string>
    <string name="type_bbv">Aviation Battleship [BBV]</string>
    <string name="type_fbb">Fast Battleship [FBB]</string>
    <string name="type_cv">Aircraft Carrier [CV]</string>
    <string name="type_cvl">Light Aircraft Carrier [CVL]</string>
    <string name="type_cvb">Armored Aircraft Carrier [CVB]</string>
    <string name="type_ss">Submarine [SS(V)]</string>
    <string name="type_de">Destroyer Escort [DE]</string>
    <string name="type_aux">Aux [AR][AO][AV][LHA][AS]</string>
    <string name="t_lib">Library</string>
    <string name="t_farm">Farm calculator</string>
    <string name="t_drop">Drop chance</string>
    <string name="t_craft">Craft chance</string>
    <string name="t_setup">Edit setup</string>
    <string name="ds_s_model">Select model</string>
    <string name="ds_s_ship">Select ship</string>
    <string name="ds_s_class">Select class</string>
    <string name="ds_s_type">Select type</string>
    <string name="lib_type">Type</string>
    <string name="initializing_core" translatable="false">Initializing core...</string>
    <string name="iinpt" translatable="false">Invalid input</string>
    <string name="se_create">Create new setup..</string>
    <string name="se_name">Name</string>
    <string name="se_add_rules">DO NOT use: \\ \| / . , \' \" : ;</string>
    <string name="se_delete">Delete setups</string>
    <string name="entries">reps</string>
</resources>
