<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:ads="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center_vertical"
        android:padding="10dp"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:id="@+id/linearLayout2">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/main_bt_library"
                style="@android:style/Widget.DeviceDefault.Button"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="toLib"
                android:text="@string/library" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/main_bt_farm"
                style="@android:style/Widget.DeviceDefault.Button"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="toFarm"
                android:text="@string/leveling_cost" />

            <Button
                android:id="@+id/main_bt_proke"
                style="@android:style/Widget.DeviceDefault.Button"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="toCC"
                android:text="@string/chance_proke" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/main_bt_craft"
                style="@android:style/Widget.DeviceDefault.Button"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="toCraft"
                android:text="@string/craft_chance" />

            <Button
                android:id="@+id/main_bt_drop"
                style="@android:style/Widget.DeviceDefault.Button"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="toDrop"
                android:text="@string/droplist" />
        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/main_ver"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"/>

    <com.google.android.gms.ads.AdView
        android:id="@+id/main_ad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        ads:adSize="BANNER"
        ads:adUnitId="ca-app-pub-7799305268524604/3071417253"/>

    <TextView
        android:id="@+id/main_concheck"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/linearLayout2"
        android:layout_centerHorizontal="true"
        android:gravity="center_horizontal"
        android:text="@string/checking_connection_with_kcdb"
        android:visibility="gone" />

    <ProgressBar
        android:id="@+id/main_pb"
        style="@android:style/Widget.DeviceDefault.Light.ProgressBar.Inverse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/main_concheck"
        android:layout_centerHorizontal="true"
        android:visibility="gone" />

    <TextView
        android:id="@+id/main_initst"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout2"
        android:layout_centerHorizontal="true"
        android:text="@string/initializing_core"
        android:visibility="gone" />

    <ProgressBar
        android:id="@+id/main_pbi"
        style="@android:style/Widget.DeviceDefault.Light.ProgressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/main_initst"
        android:layout_centerHorizontal="true"
        android:indeterminate="true"
        android:visibility="gone" />

</RelativeLayout>
